--- a/src/components/CardProdutos/Cards.css
+++ b/src/components/CardProdutos/Cards.css
@@ -29,7 +29,7 @@ body {
   top: -50%;
   width: 100%;
   height: 100%;
-  background: #ff5a5a;
+  background: #ff1900;
   transform: skewY(345deg);
   transition: 0.5s;
 }
