--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,7 +3,7 @@
 body {
 
     font-family: 'Open Sans', sans-serif;
-    display: flex;
+  
 
  
   }
@@ -11,9 +11,9 @@ body {
   .cinza{
     background-color: #f5f5f5;
     height: 60vh;
-    width: 45vw;
-    display: flex;
+    width: 40vw; 
     flex-direction: column;
+    border-radius: 15px;
     
   }
 
@@ -22,7 +22,6 @@ body {
   text-align: center;
   margin-top: 2%;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -33,18 +32,18 @@ body {
 .formField{
   display: flex;
   flex-direction: column;
-  width: 40vw;
+  width: 32vw;
   background-color: #ffff;
-  padding: 2%;
-  margin: 2%;
+  padding: 1px;
+  margin: 10%;
   text-align: start;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  margin-left:20px;
+ border-radius: 5px;
 }
 
 .formField input{
  border: none;
- padding: 2%
+ padding: 1%
 }
 
 .formField input:focus{
@@ -52,19 +51,20 @@ body {
 }
 
 .formField label{
-  color: #ff6a58;
+  color: #000000;
+  margin: 5px;
 }
 .error{
   color: red;
-  font-size: 15px;
+  font-size: 10px;
 }
 
 .button {
     justify-content: center;
     border: none;
     padding: 1em;
-    width: 100%;
-    background-color: #ff6a58;
+    width: 50%;
+    background-color:#ff1900;
     color: #ffff;
 }
 
