--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,22 +18,22 @@ nav ul{
     gap:20px;
 }
 
-nav ul li{
-    list-style: none;
-    text-align: center;
-
+nav a{
+    color: black;
+    text-decoration: none;
 }
+
 .logo{
     left: 10px;
     width: 10em;
 }
 
-.visitante{
+.login{
     color: #ff1900;
     padding-left: 30px ;
 }
 
-.visitante a {
+.login a {
     color:#ff1900;
     text-decoration: none;
 }
