--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,4 +1,6 @@
 .body{
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
